src/test/deca/context/valid/protected.deca
class A {
    protected int a;
}

class B extends A {
    void method() {
    B b = new B();
    b.a;
    }
}

