src/test/deca/context/invalid/assign-invalidLvalue.deca
class A {
    void method() {
    }
}
class B {
}

{
    A a = new A();
    a.method() = 3;
}
